--- a/gradle/common.gradle
+++ b/gradle/common.gradle
@@ -7,11 +7,11 @@ buildscript {
 
 apply plugin: 'java'
 apply plugin: 'idea'
+apply plugin: 'docker'
 
 /*********************************  Project Config  ************************************************/
 
 group = GROUP
-version = env("version")
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
@@ -61,14 +61,6 @@ pluginManager.withPlugin('kotlin') {
 
 }
 
-/*********************************  Tools  ************************************************/
 
-String env(String name, String defaultValue = "undefined") {
-    // 从启动参数读取
-    if (project.ext.has(name)) {
-        return project.ext[name]
-        // 从环境变量读取
-    } else if (System.getenv().containsKey(name))
-        return System.getenv(name)
-    return defaultValue
-}
+
+
