--- a/gradle.properties
+++ b/gradle.properties
@@ -3,6 +3,6 @@ SPRINGCLOUD_VERSION=Hoxton.RELEASE
 SPRINGCLOUD_ALIBABA_VERSION=2.1.0.RELEASE
 KOTLIN_VERSION=1.3.72
 ENV_DEFAULT=alpha
-GROUP=com.wb.todo.demo
+GROUP=com.github.wb.todo.demo.main
 SERVER_PORT=8080
 org.gradle.jvmargs=-Xmx2024m -XX:MaxPermSize=512m
